--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --workers=2 --title=performance",
+    "start": "egg-scripts start --daemon --workers=2 --title=performance",
     "stop": "egg-scripts stop --title=performance",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
